Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-25056

Rebalance hanging during workload with persistence

    XMLWordPrintable

Details

    Description

      I just picked up build  5.0.0-3211 to verify an unrelated issue (MB-25037) and the initial rebalance of test stopped progressing at 55% (according to ui).  There are 2k items and op rate was 30k.  I stopped data loading and rebalance did not complete.  Rebalance started 4 hrs ago.  Logs repeat with many vbuckets being in the move state:

      {move_state,221,
                   ['ns_1@172.23.108.104','ns_1@172.23.108.108'],
                   ['ns_1@172.23.108.108','ns_1@172.23.108.96'],
                   [{replica_building_stats,'ns_1@172.23.108.108',1,1},
                    {replica_building_stats,'ns_1@172.23.108.96',1,1}]},
      {move_state,24,
                   ['ns_1@172.23.108.103','ns_1@172.23.108.104'],
                   ['ns_1@172.23.108.107','ns_1@172.23.108.96'],
                   [{replica_building_stats,'ns_1@172.23.108.107',2,2},
                    {replica_building_stats,'ns_1@172.23.108.96',2,2}]}]

       

      Collect logs attached along with mcd trace from .103.

      mc_trace.txt

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tommie Tommie McAfee (Inactive)
            tommie Tommie McAfee (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty